# libshell

./: CMakeLists.txt
src/: ElasticShell.cpp  GeometryDerivatives.cpp  MeshConnectivity.cpp
src/MaterialModel/: BilayerStVKMaterial.cpp  NeoHookeanMaterial.cpp  StVKMaterial.cpp  TensionFieldStVKMaterial.cpp
src/SecondFundamentalForm/: MidedgeAngleSinFormulation.cpp  MidedgeAngleTanFormulation.cpp  MidedgeAverageFormulation.cpp
